--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                         <input id="lbsInput" type="number" class="form-control form-control-lg"
                             placeholder="Enter Pounds...">
                     </div>
+
+                    
                 </form>
                 <div id="output">
                     <div class="card card-primary mb-2">
@@ -49,6 +51,27 @@
                             <div id="ozOutput"></div>
                         </div>
                     </div>
+
+                    <!-- <div class="card card-danger mb-2">
+                        <div class="card-block">
+                            <h4>Ounces:</h4>
+                            <div id="ozOutput"></div>
+                        </div>
+                    </div> -->
+
+                    <!-- <div class="card card-danger mb-2">
+                        <div class="card-block">
+                            <h4>Ounces:</h4>
+                            <div id="ozOutput"></div>
+                        </div>
+                    </div> -->
+
+                    <!-- <div class="card card-danger mb-2">
+                        <div class="card-block">
+                            <h4>Ounces:</h4>
+                            <div id="ozOutput"></div>
+                        </div>
+                    </div> -->
                 </div>
             </div>
         </div>
