--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         body {
             margin-top: 70px;
-            background: #333;
+            background: rgb(121, 30, 30);
             color: rgb(233, 211, 15);
 
         }
